[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/open_kanban/kanban.gd" type="Script" id=1]
[ext_resource path="res://addons/open_kanban/res/images/ui/icon.png" type="Texture" id=2]
[ext_resource path="res://addons/open_kanban/res/boxes/inner_pressed.tres" type="StyleBox" id=3]
[ext_resource path="res://addons/open_kanban/res/fonts/light.tres" type="DynamicFont" id=4]
[ext_resource path="res://addons/open_kanban/res/boxes/highlight.tres" type="StyleBox" id=5]
[ext_resource path="res://addons/open_kanban/system/auto_scroll_mover.gd" type="Script" id=8]
[ext_resource path="res://addons/open_kanban/system/tool_button.tscn" type="PackedScene" id=9]
[ext_resource path="res://addons/open_kanban/res/images/ui/settings.png" type="Texture" id=10]

[sub_resource type="StyleBoxEmpty" id=1]
content_margin_left = 12.0
content_margin_right = 12.0
content_margin_top = 12.0
content_margin_bottom = 12.0

[sub_resource type="StyleBoxEmpty" id=5]

[node name="kanban" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="bg" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="move" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="h" type="HBoxContainer" parent="move"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="-1" type="Control" parent="move/h"]
margin_right = 240.0
margin_bottom = 600.0
rect_min_size = Vector2( 240, 0 )
script = ExtResource( 8 )

[node name="0" type="Control" parent="move/h"]
margin_left = 244.0
margin_right = 780.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 8 )

[node name="1" type="Control" parent="move/h"]
margin_left = 784.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 240, 0 )
script = ExtResource( 8 )

[node name="v" type="VBoxContainer" parent="move"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="-1" type="Control" parent="move/v"]
margin_right = 1024.0
margin_bottom = 240.0
rect_min_size = Vector2( 0, 240 )
script = ExtResource( 8 )

[node name="0" type="Control" parent="move/v"]
margin_top = 244.0
margin_right = 1024.0
margin_bottom = 356.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 8 )

[node name="1" type="Control" parent="move/v"]
margin_top = 360.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 240 )
script = ExtResource( 8 )

[node name="panel" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="vbox" type="VBoxContainer" parent="panel"]
margin_left = 12.0
margin_top = 12.0
margin_right = 1012.0
margin_bottom = 588.0
custom_constants/separation = 12

[node name="tab" type="HBoxContainer" parent="panel/vbox"]
margin_right = 1000.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 48 )
custom_constants/separation = 12

[node name="logo" type="TextureRect" parent="panel/vbox/tab"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="page" parent="panel/vbox/tab" instance=ExtResource( 9 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 60.0
margin_right = 84.0
margin_bottom = 48.0
text = "Page"
OTS_ID = "PAGE"

[node name="search" parent="panel/vbox/tab" instance=ExtResource( 9 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 60.0
margin_right = 84.0
margin_bottom = 48.0
text = "Search"
OTS_ID = "SEARCH"

[node name="filter" parent="panel/vbox/tab" instance=ExtResource( 9 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 60.0
margin_right = 116.0
margin_bottom = 48.0
text = "Filter"
OTS_ID = "FILTER"

[node name="sort" parent="panel/vbox/tab" instance=ExtResource( 9 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 60.0
margin_right = 116.0
margin_bottom = 48.0
text = "Sort"
OTS_ID = "SORT"

[node name="settings" parent="panel/vbox/tab" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 952.0
margin_right = 1000.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 10

[node name="texture" type="TextureRect" parent="panel/vbox/tab/settings"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 10 )
expand = true

[node name="scroll" type="ScrollContainer" parent="panel/vbox"]
margin_top = 60.0
margin_right = 1000.0
margin_bottom = 576.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="hbox" type="HBoxContainer" parent="panel/vbox/scroll"]
margin_right = 1016.0
margin_bottom = 504.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 12

[node name="add" parent="panel/vbox/scroll/hbox" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 771.0
margin_right = 1016.0
margin_bottom = 126.0
rect_min_size = Vector2( 245, 126 )
size_flags_vertical = 0
text = "+ Add list"
OTS_ID = "ADD_LIST"

[node name="drag_view" type="CenterContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 439.077
margin_top = -53.7391
margin_right = 439.077
margin_bottom = -53.7391
use_top_left = true

[node name="panel" type="PanelContainer" parent="drag_view"]
margin_left = -111.0
margin_top = -24.0
margin_right = 110.0
margin_bottom = 24.0
rect_min_size = Vector2( 221, 48 )
mouse_default_cursor_shape = 13
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = ExtResource( 3 )

[node name="title" type="Label" parent="drag_view/panel"]
margin_left = 12.0
margin_top = 12.0
margin_right = 179.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 4 )
custom_styles/normal = SubResource( 5 )
valign = 1
autowrap = true

[node name="highlight" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
mouse_filter = 2
custom_styles/panel = ExtResource( 5 )

[connection signal="pressed" from="panel/vbox/tab/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="panel/vbox/scroll/hbox/add" to="." method="add_list"]
